--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <script src="js/lib/phaser.js"></script>
 
         <script src="js/objs/antibody.js"></script>
+        <script src="js/objs/bacteria.js"></script>
 
         <script src="js/states/level1.js"></script>
 
