--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <body>
         <script src="js/lib/phaser.js"></script>
 
+        <script src="js/states/body.js"></script>
         <script src="js/states/level1.js"></script>
 
         <script src="js/main.js"></script>
