--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <script src="js/lib/phaser.js"></script>
 
         <script src="js/states/body.js"></script>
-        <script src="js/states/level1.js"></script>
+        <script src="js/states/lungs.js"></script>
 
         <script src="js/main.js"></script>
     </body>
