Refactor Bacteria into object that extended the Phaser Sprite class

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <body>
         <script src="js/lib/phaser.js"></script>
 
+        <script src="js/objects/Bacteria.js"></script>
+
         <script src="js/states/body.js"></script>
         <script src="js/states/lungs.js"></script>
 
