--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
         <script src="js/states/body.js"></script>
         <script src="js/states/lungs.js"></script>
+        <script src="js/states/heart.js"></script>
         <script src="js/states/brain.js"></script>
 
         <script src="js/main.js"></script>
