Added synapses to brain level

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
         <script src="js/objects/Antibody.js"></script>
         <script src="js/objects/Bacteria.js"></script>
+        <script src="js/objects/Synapse.js"></script>
 
         <script src="js/states/body.js"></script>
         <script src="js/states/lungs.js"></script>
