--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <script src="js/objects/Antibody.js"></script>
         <script src="js/objects/Bacteria.js"></script>
         <script src="js/objects/Synapse.js"></script>
+        <script src="js/objects/RedBloodCell.js"></script>
 
         <script src="js/states/body.js"></script>
         <script src="js/states/lungs.js"></script>
