Added alveoli to lungs

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <script src="js/objects/Bacteria.js"></script>
         <script src="js/objects/Synapse.js"></script>
         <script src="js/objects/RedBloodCell.js"></script>
+        <script src="js/objects/Alveoli.js"></script>
 
         <script src="js/states/body.js"></script>
         <script src="js/states/lungs.js"></script>
