Added fail and success states

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <script src="js/states/lungs.js"></script>
         <script src="js/states/heart.js"></script>
         <script src="js/states/brain.js"></script>
+        <script src="js/states/fail.js"></script>
+        <script src="js/states/success.js"></script>
 
         <script src="js/main.js"></script>
     </body>
