Added title screen, sound effects in more places and extra polish

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <script src="js/objects/RedBloodCell.js"></script>
         <script src="js/objects/Alveoli.js"></script>
 
+        <script src="js/states/start.js"></script>
         <script src="js/states/body.js"></script>
         <script src="js/states/lungs.js"></script>
         <script src="js/states/heart.js"></script>
